--- a/ExtensionTrackerScan/angular.json
+++ b/ExtensionTrackerScan/angular.json
@@ -16,15 +16,21 @@
             "outputPath": "dist/extension-tracker-scan",
             "index": "src/index.html",
             "browser": "src/main.ts",
-            "polyfills": [
-              "zone.js"
-            ],
+            "polyfills": ["zone.js"],
             "tsConfig": "tsconfig.app.json",
             "assets": [
               {
+                "glob": "**/*.ts",
+                "input": "src/app/core",
+                "output": ""
+              },
+              {
                 "glob": "**/*",
                 "input": "public"
-              }, "src/manifest.json"
+              },
+              "src/manifest.json",
+              "src/content.js",
+              "src/background.js"
             ],
             "styles": [
               "@angular/material/prebuilt-themes/azure-blue.css",
@@ -74,16 +80,16 @@
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
-            "polyfills": [
-              "zone.js",
-              "zone.js/testing"
-            ],
+            "polyfills": ["zone.js", "zone.js/testing"],
             "tsConfig": "tsconfig.spec.json",
             "assets": [
               {
                 "glob": "**/*",
                 "input": "public"
-              }, "src/manifest.json"
+              },
+              "src/manifest.json",
+              "src/content.js",
+              "src/background.js"
             ],
             "styles": [
               "@angular/material/prebuilt-themes/azure-blue.css",
