--- a/ExtensionTrackerScan/src/manifest.json
+++ b/ExtensionTrackerScan/src/manifest.json
@@ -1,21 +1,30 @@
 {
-    "manifest_version": 3,
-    "name": "WebtoonTracker",
-    "description": "Keep track of where you stop to read your manhwa, webtoon or manga and get notified when a new chapter is coming",
-    "version": "1.0.0",
-    "permissions": [
-        "history",
-        "notifications",
-        "unlimitedStorage",
-        "storage"
-    ],
-    "icons": {
-        "128": "icone.png"
-    },
-    "host_permissions": [
-        "*://*/*"
-    ],
-    "action":{
-    "default_popup":"index.html"
+  "manifest_version": 3,
+  "name": "WebtoonTracker",
+  "description": "Keep track of where you stop to read your manhwa, webtoon or manga and get notified when a new chapter is coming",
+  "version": "1.0.0",
+  "permissions": [
+    "history",
+    "notifications",
+    "unlimitedStorage",
+    "storage",
+    "activeTab",
+    "scripting"
+  ],
+  "background": {
+    "service_worker": "background.js"
+  },
+  "content_scripts": [
+    {
+      "matches": ["<all_urls>"],
+      "js": ["content.js"]
     }
+  ],
+  "icons": {
+    "128": "icone.png"
+  },
+  "host_permissions": ["*://*/*"],
+  "action": {
+    "default_popup": "index.html"
+  }
 }
