--- a/core/package.json
+++ b/core/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "tests",
+  "name": "core",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "jest"
   },
+  "type": "module",
   "keywords": [],
   "author": "",
   "license": "ISC",
