--- a/ExtensionTrackerScan/angular.json
+++ b/ExtensionTrackerScan/angular.json
@@ -20,11 +20,6 @@
             "tsConfig": "tsconfig.app.json",
             "assets": [
               {
-                "glob": "**/*.ts",
-                "input": "src/app/core",
-                "output": ""
-              },
-              {
                 "glob": "**/*",
                 "input": "public"
               },
@@ -40,19 +35,14 @@
           },
           "configurations": {
             "production": {
-              "budgets": [
-                {
-                  "type": "initial",
-                  "maximumWarning": "500kB",
-                  "maximumError": "1MB"
+              "optimization": {
+                "scripts": true,
+                "styles": {
+                  "minify": true,
+                  "inlineCritical": false
                 },
-                {
-                  "type": "anyComponentStyle",
-                  "maximumWarning": "4kB",
-                  "maximumError": "8kB"
-                }
-              ],
-              "outputHashing": "all"
+                "fonts": false
+              }
             },
             "development": {
               "optimization": false,
