--- a/ExtensionTrackerScan/package.json
+++ b/ExtensionTrackerScan/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build && npx tsc --project tsconfig.json && tsc-alias --project tsconfig.json",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
@@ -20,10 +20,8 @@
     "@angular/platform-browser": "^19.1.0",
     "@angular/platform-browser-dynamic": "^19.1.0",
     "@angular/router": "^19.1.0",
-    "@types/jest": "^29.5.14",
     "axios": "^1.7.9",
     "cheerio": "^1.0.0",
-    "jest": "^29.7.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
@@ -33,15 +31,20 @@
     "@angular-devkit/build-angular": "^19.1.1",
     "@angular/cli": "^19.1.1",
     "@angular/compiler-cli": "^19.1.0",
+    "@types/chrome": "^0.0.297",
     "@types/jasmine": "~5.1.0",
+    "@types/jest": "^29.5.14",
+    "@types/mocha": "^10.0.10",
     "copy-webpack-plugin": "^12.0.2",
     "jasmine-core": "~5.5.0",
+    "jest": "^29.7.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "ts-loader": "^9.5.2",
+    "tsc-alias": "^1.8.10",
     "typescript": "~5.7.2",
     "webpack": "^5.97.1",
     "webpack-cli": "^6.0.1"
