--- a/ExtensionTrackerScan/angular.json
+++ b/ExtensionTrackerScan/angular.json
@@ -25,7 +25,8 @@
               },
               "src/manifest.json",
               "src/content.js",
-              "src/background.js"
+              "src/background.js",
+              "src/app/core/pattern/link-format-website-title.json"
             ],
             "styles": [
               "@angular/material/prebuilt-themes/azure-blue.css",
