--- a/ExtensionTrackerScan/package.json
+++ b/ExtensionTrackerScan/package.json
@@ -6,7 +6,7 @@
     "start": "ng serve",
     "build": "ng build && npx tsc --project tsconfig.json && tsc-alias --project tsconfig.json",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "jest"
   },
   "private": true,
   "dependencies": {
