--- a/ExtensionTrackerScan/tsconfig.json
+++ b/ExtensionTrackerScan/tsconfig.json
@@ -20,7 +20,7 @@
     "moduleResolution": "node",
     "allowSyntheticDefaultImports": true,
     "forceConsistentCasingInFileNames": true,
-    "types": ["chrome", "node", "jest", "mocha"]
+    "types": ["chrome", "node", "jest", "mocha", "uuid"]
   },
   "tsc-alias": {
     "resolveFullPaths": true,
@@ -28,7 +28,7 @@
     "verbose": false
   },
   "include": ["src/**/*.ts", "src/app/core/src/recuperer_titre_et_chapitre.ts"],
-  "exclude": ["node_modules"],
+  "exclude": ["node_modules", "src/main.ts"],
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
     "strictInjectionParameters": true,
