--- a/ExtensionTrackerScan/package.json
+++ b/ExtensionTrackerScan/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --live-reload",
     "build": "ng build --configuration production && npx tsc --project tsconfig.json && tsc-alias --project tsconfig.json",
     "watch": "ng build --watch --configuration development",
     "test": "jest"
