--- a/ExtensionTrackerScan/tsconfig.json
+++ b/ExtensionTrackerScan/tsconfig.json
@@ -20,7 +20,7 @@
     "moduleResolution": "node",
     "allowSyntheticDefaultImports": true,
     "forceConsistentCasingInFileNames": true,
-    "types": ["chrome", "node", "jest", "mocha", "uuid"]
+    "types": ["chrome", "node", "jest", "mocha"]
   },
   "tsc-alias": {
     "resolveFullPaths": true,
