--- a/ExtensionTrackerScan/package.json
+++ b/ExtensionTrackerScan/package.json
@@ -3,23 +3,23 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --hmr --poll=5000 --verbose",
+    "start": "ng serve --hmr --poll=5000",
     "build": "ng build --configuration production && npx tsc --project tsconfig.json && tsc-alias --project tsconfig.json",
     "watch": "ng build --watch --configuration development",
     "test": "jest"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^19.1.0",
+    "@angular/animations": "^19.1.3",
     "@angular/cdk": "^19.1.0",
-    "@angular/common": "^19.1.0",
-    "@angular/compiler": "^19.1.0",
-    "@angular/core": "^19.1.0",
-    "@angular/forms": "^19.1.0",
+    "@angular/common": "^19.1.3",
+    "@angular/compiler": "^19.1.3",
+    "@angular/core": "^19.1.3",
+    "@angular/forms": "^19.1.3",
     "@angular/material": "^19.1.0",
-    "@angular/platform-browser": "^19.1.0",
-    "@angular/platform-browser-dynamic": "^19.1.0",
-    "@angular/router": "^19.1.0",
+    "@angular/platform-browser": "^19.1.3",
+    "@angular/platform-browser-dynamic": "^19.1.3",
+    "@angular/router": "^19.1.3",
     "axios": "^1.7.9",
     "cheerio": "^1.0.0",
     "rxjs": "~7.8.0",
@@ -28,9 +28,9 @@
   },
   "devDependencies": {
     "@angular-builders/custom-webpack": "^19.0.0",
-    "@angular-devkit/build-angular": "^19.1.1",
-    "@angular/cli": "^19.1.1",
-    "@angular/compiler-cli": "^19.1.0",
+    "@angular-devkit/build-angular": "^19.1.4",
+    "@angular/cli": "^19.1.4",
+    "@angular/compiler-cli": "^19.1.3",
     "@types/chrome": "^0.0.297",
     "@types/jasmine": "~5.1.0",
     "@types/jest": "^29.5.14",
