add tests and fix updated bug

--- a/ExtensionTrackerScan/angular.json
+++ b/ExtensionTrackerScan/angular.json
@@ -26,6 +26,7 @@
               "src/app/angular",
               "src/assets",
               "src/manifest.json",
+              "src/full_page.html",
               "src/content.js",
               "src/background.js"
             ],
