--- a/ExtensionTrackerScan/package.json
+++ b/ExtensionTrackerScan/package.json
@@ -22,6 +22,8 @@
     "@angular/router": "^19.1.3",
     "axios": "^1.7.9",
     "cheerio": "^1.0.0",
+    "inversify": "^6.2.1",
+    "reflect-metadata": "^0.2.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
@@ -32,6 +34,7 @@
     "@angular/cli": "^19.1.4",
     "@angular/compiler-cli": "^19.1.3",
     "@types/chrome": "^0.0.297",
+    "@types/inversify": "^2.0.32",
     "@types/jasmine": "~5.1.0",
     "@types/jest": "^29.5.14",
     "@types/mocha": "^10.0.10",
