--- a/ExtensionTrackerScan/tsconfig.app.json
+++ b/ExtensionTrackerScan/tsconfig.app.json
@@ -2,7 +2,7 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "./out-tsc/app",
-    "types": ["chrome"]
+    "types": ["chrome", "inversify"]
   },
   "files": ["src/main.ts"],
   "include": ["src/**/*.d.ts"]
