--- a/ExtensionTrackerScan/package.json
+++ b/ExtensionTrackerScan/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve --hmr --poll=5000",
-    "build": "ng build --configuration production && npx tsc --project tsconfig.json && tsc-alias --project tsconfig.json",
+    "build": "ng build --configuration production && webpack --config webpack.prod.js",
     "watch": "ng build --watch --configuration development",
     "test": "jest"
   },
@@ -39,6 +39,7 @@
     "@types/jest": "^29.5.14",
     "@types/mocha": "^10.0.10",
     "copy-webpack-plugin": "^12.0.2",
+    "esbuild": "^0.24.2",
     "jasmine-core": "~5.5.0",
     "jest": "^29.7.0",
     "karma": "~6.4.0",
@@ -51,6 +52,6 @@
     "typescript": "~5.7.2",
     "webpack": "^5.97.1",
     "webpack-cli": "^6.0.1",
-    "webpack-dev-server": "^5.2.0"
+    "webpack-merge": "^6.0.1"
   }
 }
