--- a/ExtensionTrackerScan/package.json
+++ b/ExtensionTrackerScan/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve --hmr --poll=5000",
-    "build": "ng build --configuration production && webpack --config webpack.prod.js",
+    "build": "ng build --configuration production && webpack --config webpack.dev.js",
+    "build publish": "ng build --configuration production && webpack --config webpack.prod.js",
     "watch": "ng build --watch --configuration development",
     "test": "jest"
   },
@@ -13,7 +14,6 @@
     "@angular/animations": "^19.1.3",
     "@angular/cdk": "^19.1.0",
     "@angular/common": "^19.1.3",
-    "@angular/compiler": "^19.1.3",
     "@angular/core": "^19.1.3",
     "@angular/forms": "^19.1.3",
     "@angular/material": "^19.1.0",
@@ -40,6 +40,7 @@
     "@types/mocha": "^10.0.10",
     "copy-webpack-plugin": "^12.0.2",
     "esbuild": "^0.24.2",
+    "html-webpack-plugin": "^5.6.3",
     "jasmine-core": "~5.5.0",
     "jest": "^29.7.0",
     "karma": "~6.4.0",
