--- a/ExtensionTrackerScan/package.json
+++ b/ExtensionTrackerScan/package.json
@@ -4,8 +4,8 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve --hmr --poll=5000",
+    "publish": "ng build --configuration production && webpack --config webpack.prod.js",
     "build": "ng build --configuration production && webpack --config webpack.dev.js",
-    "build publish": "ng build --configuration production && webpack --config webpack.prod.js",
     "watch": "ng build --watch --configuration development",
     "test": "jest"
   },
@@ -30,7 +30,7 @@
   },
   "devDependencies": {
     "@angular-builders/custom-webpack": "^19.0.0",
-    "@angular-devkit/build-angular": "^19.1.4",
+    "@angular-devkit/build-angular": "^19.0.7",
     "@angular/cli": "^19.1.4",
     "@angular/compiler-cli": "^19.1.3",
     "@types/chrome": "^0.0.297",
@@ -50,7 +50,7 @@
     "karma-jasmine-html-reporter": "~2.1.0",
     "ts-loader": "^9.5.2",
     "tsc-alias": "^1.8.10",
-    "typescript": "~5.7.2",
+    "typescript": "^5.6.3",
     "webpack": "^5.97.1",
     "webpack-cli": "^6.0.1",
     "webpack-merge": "^6.0.1"
