--- a/ExtensionTrackerScan/angular.json
+++ b/ExtensionTrackerScan/angular.json
@@ -31,11 +31,7 @@
                 "glob": "**/*",
                 "input": "public"
               },
-              "src/app/angular",
-              "src/assets",
-              "src/manifest.json",
-              "src/content.js",
-              "src/background.js"
+              "src/manifest.json"
             ],
             "styles": [
               "@angular/material/prebuilt-themes/azure-blue.css",
@@ -45,7 +41,6 @@
           },
           "configurations": {
             "production": {
-              "aot": false,
               "fileReplacements": [
                 {
                   "replace": "src/environments/environment.ts",
