--- a/ExtensionTrackerScan/src/manifest.json
+++ b/ExtensionTrackerScan/src/manifest.json
@@ -15,12 +15,6 @@
     "service_worker": "background.js",
     "type": "module"
   },
-  "content_scripts": [
-    {
-      "matches": ["<all_urls>"],
-      "js": ["content-script.js"]
-    }
-  ],
   "icons": {
     "128": "public/icone.png"
   },
@@ -29,6 +23,21 @@
     "default_popup": "index.html"
   },
   "content_security_policy": {
-    "extension_pages": "script-src 'self' 'wasm-unsafe-eval'; object-src 'self';"
-  }
+    "extension_pages": "script-src 'self'; object-src 'self'; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com;",
+    "sandbox": "sandbox allow-scripts allow-forms allow-popups allow-modals; script-src 'self' 'unsafe-inline' 'unsafe-eval'; child-src 'self';"
+  },
+  "web_accessible_resources": [
+    {
+      "resources": ["index.html", "assets/images/*", "main.js", "*.js"],
+      "matches": ["<all_urls>"]
+    }
+  ],
+  "content_scripts": [
+    {
+      "matches": ["*://*/*"],
+      "css": ["styles.css"],
+      "js": ["content-script.js"],
+      "all_frames": true
+    }
+  ]
 }
