--- a/ExtensionTrackerScan/tsconfig.app.json
+++ b/ExtensionTrackerScan/tsconfig.app.json
@@ -4,6 +4,6 @@
     "outDir": "./out-tsc/app",
     "types": ["chrome", "inversify"]
   },
-  "files": ["src/main.ts"],
+  "files": ["src/main.ts", "src/background.ts", "src/content-script.ts"],
   "include": ["src/**/*.d.ts"]
 }
